--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
